fixed grid spacing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   display: block;
   float: left;
   height: 100%; 
-  width: 15%;
+  width: 372px;
   overflow-y: hidden;
   overflow-x: hidden;
 }
@@ -49,7 +49,7 @@ body {
 }
 
 .post.grid.padding {
-  padding: 10px;
+  padding: 1vw;
 }
 
 .post.grid.main {
@@ -57,7 +57,7 @@ body {
   flex-flow: column wrap;
   float: left;
   height: 100%;
-  width: 85%;
+  width: calc(100% - 372px); 
   overflow-x: scroll;
 }
 
